testsuite/tests/builtins/list_methods/sublist/non_int_low/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.sublist("Not an int", 3))
   │       ─────────────┬────────────  
   │                    ╰────────────── Expecting a "Int" for the parameter "low", got a "Str"
───╯
